Add top image to the Churn Prediction notebook

--- a/ChurnPrediction/eda_and_model_selection_and_training.ipynb
+++ b/ChurnPrediction/eda_and_model_selection_and_training.ipynb
@@ -5,10 +5,7 @@
    "id": "7110d66c-283f-48ce-b027-369fc3dca3c7",
    "metadata": {},
    "source": [
-    "<figure>\n",
-    "    <img src=\"https://cdn3.invitereferrals.com/blog/wp-content/uploads/2021/05/15093943/Customer-Churn-Meaning-Causes-and-Strategies.Banner-Image.jpg\" style=\"width: 100%\">\n",
-    "    <p align=\"center\">Credits: <a href=\"https://www.invitereferrals.com/blog/customer-churn-strategies/\">Invite Referrals</a></p>\n",
-    "</figure>\n",
+    "<img src=\"imgs/ChurnPrediction.png\" width=1080>Credits: DALL-E</img>\n",
     "\n",
     "Customer Churn refers to when a person stops using a company's services or products and ceases to be a customer. Losing customers is a serious problem that impacts all industries. Companies must understand and analyze reasons and work proactively to reduce customer churn.\n",
     "\n",
