Add top image to Customer Segmentation project

--- a/CustomerSegmentation/CustomerSegmentation.ipynb
+++ b/CustomerSegmentation/CustomerSegmentation.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"imgs/CustomerSegmentation.png\" width=1080>Credits: DALL-E</img>\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "In my last [post](https://thecamilovisk.github.io/posts/Collaborative-Filtering-Recommender-System/) we hade a brief discussion about  Recommender Systems, one of the most widespread application of machine learning technology in industry. In this post we'll talk about Customer Segmentation, another essential machine learning task used by companies to get insights about their clients base, like their needs, which groups should marketing programs be focused on, what preferences these groups have, how to engage new clients and so on.\n",
@@ -748,14 +750,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_53436/4143534843.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_50544/4143534843.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  customer_data[\"Gender\"].replace({\"Male\": 0, \"Female\": 1}, inplace=True)\n",
-      "/tmp/ipykernel_53436/4143534843.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_50544/4143534843.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  customer_data[\"Gender\"].replace({\"Male\": 0, \"Female\": 1}, inplace=True)\n"
      ]
     }
@@ -1121,7 +1123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_53436/2543292152.py:1: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "/tmp/ipykernel_50544/2543292152.py:1: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
       "  cmap = cm.get_cmap(\"Spectral\", n_clusters)\n"
      ]
     },
@@ -1251,7 +1253,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_53436/930194893.py:1: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "/tmp/ipykernel_50544/930194893.py:1: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
       "  cmap = cm.get_cmap(\"Spectral\", n_clusters)\n"
      ]
     },
