Fixing image paths for the Recommendation Model project

--- a/RecommenderSystems/CollaborativeFilteringMemoryBased.ipynb
+++ b/RecommenderSystems/CollaborativeFilteringMemoryBased.ipynb
@@ -7,7 +7,7 @@
     "# Collaborative Filtering based Recommender System\n",
     "\n",
     "<figure style=\"display: block; margin-left: auto; margin-right: auto; width: 90%; text-align: center;\">\n",
-    "  <img src=\"https://raw.githubusercontent.com/TheCamilovisk/DSNotebooks/main/RecommenderSystems/figures/recommender_systems.png\" alt=\"Recommender Systems.\">\n",
+    "  <img src=\"figures/recommender_systems.png\" alt=\"Recommender Systems.\">\n",
     "</figure>"
    ]
   },
@@ -43,7 +43,7 @@
     "* **User-based**, which exploits similarities between **users**. A rating prediction of an user to an item is computed using the item ratings given by similar users.\n",
     "* **Item-based**, which exploits similarities between **items**. A rating prediction of an user to an item is computed using ratings of similar items.\n",
     "<figure style=\"display: block; margin-left: auto; margin-right: auto; width: 90%; text-align: center;\">\n",
-    "  <img src=\"https://raw.githubusercontent.com/TheCamilovisk/DSNotebooks/main/RecommenderSystems/figures/CF_approachs.png\" alt=\"CF approaches.\">\n",
+    "  <img src=\"figures/CF_approachs.png\" alt=\"CF approaches.\">\n",
     "    <figcaption>Collaborative Filtering approaches.</figcaption>\n",
     "</figure>"
    ]
@@ -57,7 +57,7 @@
     "Figure below illustrate an example interactions matrix. User ratings are in range 1 to 5. A rating 0 means that this specific item was not rated by this specific user.\n",
     "\n",
     "<figure style=\"display: block; margin-left: auto; margin-right: auto; width: 90%; text-align: center;\">\n",
-    "  <img src=\"https://raw.githubusercontent.com/TheCamilovisk/DSNotebooks/main/RecommenderSystems/figures/sample_iter_mat.png\" alt=\"Example interaction matrix\">\n",
+    "  <img src=\"figures/sample_iter_mat.png\" alt=\"Example interaction matrix\">\n",
     "  <figcaption>Example interaction matrix</figcaption>\n",
     "</figure>"
    ]
@@ -404,7 +404,7 @@
     "In this post we'll build our system using the **memory based** approach, in which similarities between users/items are computed using the rating data itself. Therefore, the *i*-th row of an interactions matrix is considered as the **feature vector** of user *i*, while the *j*-th column of an interaction matrix is considered as the **feature vector** of item *j*.\n",
     "\n",
     "<figure style=\"display: block; margin-left: auto; margin-right: auto; width: 90%; text-align: center;\">\n",
-    "  <img src=\"https://raw.githubusercontent.com/TheCamilovisk/DSNotebooks/main/RecommenderSystems/figures/memory_based.png\" alt=\"Feature vectors in CF memory-based approach\">\n",
+    "  <img src=\"figures/memory_based.png\" alt=\"Feature vectors in CF memory-based approach\">\n",
     "  <figcaption>Feature vectors in CF memory-based approach</figcaption>\n",
     "</figure>"
    ]
