Adapting the projects for a more suited language

--- a/RecommenderSystems/CollaborativeFilteringMemoryBased.ipynb
+++ b/RecommenderSystems/CollaborativeFilteringMemoryBased.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collaborative Filtering based Recommender System\n",
+    "# Collaborative Filtering based Recommender System From Scratch\n",
     "\n",
-    "<figure style=\"display: block; margin-left: auto; margin-right: auto; width: 90%; text-align: center;\">\n",
+    "<figure style=\"display: block; margin-left: auto; margin-right: auto; width: 1080; text-align: center;\">\n",
     "  <img src=\"figures/recommender_systems.png\" alt=\"Recommender Systems.\">\n",
     "</figure>"
    ]
