Fixing some typos.

--- a/CustomerSegmentation/CustomerSegmentation.ipynb
+++ b/CustomerSegmentation/CustomerSegmentation.ipynb
@@ -481,9 +481,7 @@
    "source": [
     "We can conclude that:\n",
     " - **Gender** is a nominal feature only 2 possible values: *Male* and *Female*.\n",
-    " - **Age** and **Spending Score (1-100)** are numeric discrete fatures, as both can only assume a finite set of values.\n",
-    "    - **Age** ranges from 18 to 70.\n",
-    "    - **Spending Score (1-100)** ranges from 1 to 100\n",
+    " - **Age** and **Spending Score (1-100)** are numeric discrete features, as both can only assume a finite set of values. **Age** ranges from 18 to 70, and **Spending Score (1-100)** ranges from 1 to 100\n",
     "- **Annual Income (k\\\\$)** is a numeric continuous feature, as it can assume virtually any value."
    ]
   },
@@ -536,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As said before, the \"Gender\" variable is a **binary** variable, and it's value can be either **Male** of **Female**. One can also note that there are sightly more **Female** entries than **Male**."
+    "As said before, the **Gender** variable is a *binary* variable, and it's value can be either *Male* of *Female*. One can also note that there are sightly more *Female* entries than *Male*."
    ]
   },
   {
@@ -606,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Annual Icome of the Customers"
+    "### Annual Income of the Customers"
    ]
   },
   {
@@ -633,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the descriptive analysis above, we can conclude that 50% of the consumers have annual income between 41,5 k$ and 78 k$, and the average income is about 61,5 k$. The minimum user income is of 15 k$ and the maximun is of 137 k$.\n",
+    "From the descriptive analysis above, we can conclude that 50% of the consumers have annual income between 41,5 k$ and 78 k$, and the average income is about 61,5 k$. The minimum user income is of 15 k$ and the maximum is of 137 k$.\n",
     "\n",
     "We can also see that the value of 137 k$ seems to be an outlier."
    ]
@@ -704,10 +702,10 @@
     "\n",
     "1. The number $ k $ of clusters to be created is chosen.\n",
     "2. The algorithm randomly choose $ k $ observations as initial cluster centroids.\n",
-    "3. The Euclidian Distances between all observations and the cluster centroids are computed.\n",
+    "3. The Euclidean Distances between all observations and the cluster centroids are computed.\n",
     "4. Each observation is assigned to its closest cluster.\n",
-    "5. Each cluster centroids are updated with the mean point of all cluster observations.\n",
-    "6. Repeat steps **3** to **5** until convergency (i.e: maximun number of iterations, sum of squared observation-cluster distances, etc.)\n",
+    "5. Each cluster centroid is updated with the mean point of all cluster observations.\n",
+    "6. Repeat steps **3** to **5** until convergence (i.e: maximum number of iterations, sum of squared observation-cluster distances, etc.)\n",
     "\n",
     "These steps are executed a bunch of times for different initial centroids. The execution that results in *minimum difference of variation between clusters* is chosen as the best one.\n",
     "\n",
@@ -715,7 +713,7 @@
     "$$\n",
     "\\sum_{i=0}^k \\min_{\\mu_j \\in C} (||x_i - \\mu_j||^2)\n",
     "$$\n",
-    "where $ x_i $ is the components vector of the $ i $-th observation and $ \\mu_j $ is the centroid of the $ j $-th cluster. Inertia can be recognized as a measure of how internally coherent clusters are."
+    "where $ x_i $ is the components vector of the $ i $-th observation and $ \\mu_j $ is the centroid of the $ j $-th cluster. Inertia can be interpreted as a measure of how internally coherent clusters are."
    ]
   },
   {
@@ -766,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be used by the k-means algorithm, all variables must be of **numeric** type. As **Gender** contains only two values, we'll replace all \"Male\" occurences by 0 and \"Female\" occurrences by 1."
+    "To be used by the k-means algorithm, all variables must be of *numeric* type. As **Gender** contains only two values, we'll replace all \"Male\" occurrences by 0 and \"Female\" occurrences by 1."
    ]
   },
   {
@@ -778,7 +776,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_42312/1845303345.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_89189/1845303345.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  customer_data[\"Gender\"] = customer_data[\"Gender\"].replace({\"Male\": 0, \"Female\": 1})\n"
      ]
     }
@@ -841,7 +839,7 @@
    "source": [
     "#### Average Solhouette Method\n",
     "\n",
-    "The Silhouette method provides a succint graphical representation of how well each observation has been classified.\n",
+    "The Silhouette method provides a succinct graphical representation of how well each observation has been classified.\n",
     "\n",
     "The silhouette coefficient is defined as:\n",
     "$$\n",
@@ -849,7 +847,7 @@
     "$$\n",
     "where $ a $ is the means distance between a sample and all other observations in the same class, and $ b $ is the mean distance between a sample and all other observations in the next nearest cluster. The silhouette coefficient is a measure of how similar an observation is to its own cluster compared to other clusters. It ranges from -1 to +1, where a high values indicates that the observation is well matched to its own cluster and poorly matched to neighboring clusters.\n",
     "\n",
-    "Our approach will be simple: we'll compute the average silhouette coefficient of several clustering strategies using different $ k $ values. Gennerally speaking, if we obtain a high average value it means that we have good clustering.\n",
+    "Our approach will be simple: we'll compute the average silhouette coefficient of several clustering strategies using different $ k $ values. Generally speaking, if we obtain a high average value it means that we have good clustering.\n",
     "\n",
     "For a given clustering model, the following function:\n",
     "- Computer the silhouette coefficient for each sample.\n",
@@ -912,7 +910,7 @@
    "source": [
     "For each cluster, the samples coefficients are sorted and plotted, forming a **region** for the cluster. Basically, the less \"jagged\", longer and similar those clusters regions are the better.\n",
     "\n",
-    "The sklearn's [silhouette_samples](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.silhouette_samples.html#) function computes the silhouette coefficients for for each data sample and its assigned cluster centroid. [silhouette_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.silhouette_score.html) returns the average sillhouette coefficient for a clustering given the data and it's assigned cluster centroids.\n",
+    "The sklearn's [silhouette_samples](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.silhouette_samples.html#) function computes the silhouette coefficients for for each data sample and its assigned cluster centroid. [silhouette_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.silhouette_score.html) returns the average silhouette coefficient for a clustering given the data and it's assigned cluster centroids.\n",
     "\n",
     "Now, we'll analyze the silhouette plots for a set of clustering models."
    ]
@@ -1077,7 +1075,7 @@
    "source": [
     "### Clustering Visualization\n",
     "\n",
-    "As the dataset is composed of 4 variables, it is impossible for us to visulize the clustering in such space. So we need a way to visualize this data in a **reduced space**. For this, we'll used the so called **Principal Component Analysis** (**PCA**), a statistical technique that decompose a multivariate dataset in a set of **principal components**: successive orthogonal components that explainthe data's variance. The first principal component can be defined as a direction of maximun variance of the projected data, while the second component can be defined as a direction of the second maximun variance of the projected data, the third component is the direction of the third maximun variance, and so on.\n",
+    "As the dataset is composed of 4 variables, it is impossible for us to visualize the clustering in such space. So we need a way to visualize this data in a **reduced space**. For this, we'll used the so called **Principal Component Analysis** (**PCA**), a statistical technique that decompose a multivariate dataset in a set of **principal components**: successive orthogonal components that explain the data's variance. The first principal component can be defined as a direction of maximum variance of the projected data, while the second component can be defined as a direction of the second maximum variance of the projected data, the third component is the direction of the third maximum variance, and so on.\n",
     "\n",
     "First, we compute the optimal clustering."
    ]
