Fixing more typos.

--- a/CustomerSegmentation/CustomerSegmentation.ipynb
+++ b/CustomerSegmentation/CustomerSegmentation.ipynb
@@ -534,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As said before, the **Gender** variable is a *binary* variable, and it's value can be either *Male* of *Female*. One can also note that there are sightly more *Female* entries than *Male*."
+    "As said before, **Gender** is a *binary* feature, and it's value can be either *Male* of *Female*. One can also note that there are sightly more *Female* entries than *Male*."
    ]
   },
   {
@@ -543,7 +543,7 @@
    "source": [
     "### Distribution plots\n",
     "\n",
-    "The following variables are of continuous type, and we'll basically describe then using their histogram, density estimation functions and [box plots](https://seaborn.pydata.org/generated/seaborn.boxplot.html). We'll create a function that encapsulates the creation of those plots."
+    "The following variables are numerical, and we'll basically describe then using their histogram, density estimation functions and [box plots](https://seaborn.pydata.org/generated/seaborn.boxplot.html). We'll create a function that encapsulates the creation of those plots."
    ]
   },
   {
@@ -694,7 +694,7 @@
    "source": [
     "### K-means Algorithm\n",
     "\n",
-    "The most common k-means clustering algorithm (a.k.a. naive k-means) is a **unsupervised learning** technique that consists in cluster similar data based on the **Euclidean Distance** of each data point, or observations, to its closes *cluster centroid*. The algorithm aims to minimize the distances between *cluster centroids* and their assigned observations and maximize *inter-cluster distances*.\n",
+    "The most common k-means clustering algorithm (a.k.a. naive k-means) is a **unsupervised learning** technique that consists in cluster similar data based on the **Euclidean Distance** of each data point, or observations, to its closest *cluster centroid*. The algorithm aims to minimize the distances between *cluster centroids* and their assigned observations and maximize *inter-cluster distances*.\n",
     "\n",
     "![Clustering example](imgs/clustering_example.png)\n",
     "\n",
@@ -709,7 +709,7 @@
     "\n",
     "These steps are executed a bunch of times for different initial centroids. The execution that results in *minimum difference of variation between clusters* is chosen as the best one.\n",
     "\n",
-    "The k-means algorithm clusters data by trying to separate samples in $ k $ groups of equal variance, minimizing a criterion know as the **inertia** or **intra-cluster sum-of-squares**, which is mathematically defined as:\n",
+    "The k-means algorithm clusters data by trying to separate samples in $ k $ groups of equal variance, minimizing a criterion known as the **inertia** or **intra-cluster sum-of-squares**, which is mathematically defined as:\n",
     "$$\n",
     "\\sum_{i=0}^k \\min_{\\mu_j \\in C} (||x_i - \\mu_j||^2)\n",
     "$$\n",
@@ -764,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be used by the k-means algorithm, all variables must be of *numeric* type. As **Gender** contains only two values, we'll replace all \"Male\" occurrences by 0 and \"Female\" occurrences by 1."
+    "To be used by the k-means algorithm, all features must be of *numeric* type. As **Gender** contains only two values, we'll replace all \"Male\" occurrences by 0 and \"Female\" occurrences by 1."
    ]
   },
   {
@@ -782,7 +782,9 @@
     }
    ],
    "source": [
-    "customer_data[\"Gender\"] = customer_data[\"Gender\"].replace({\"Male\": 0, \"Female\": 1})"
+    "customer_data[\"Gender\"] = customer_data[\"Gender\"].replace(\n",
+    "    {\"Male\": 0, \"Female\": 1}\n",
+    ")"
    ]
   },
   {
@@ -798,7 +800,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inertia_values = [get_clustering_inertia(k, customer_data.iloc[:, 1:]) for k in range(1, 11)]"
+    "inertia_values = [\n",
+    "    get_clustering_inertia(k, customer_data.iloc[:, 1:]) for k in range(1, 11)\n",
+    "]"
    ]
   },
   {
@@ -845,7 +849,7 @@
     "$$\n",
     "s = \\frac{b - a}{max(a, b)}\n",
     "$$\n",
-    "where $ a $ is the means distance between a sample and all other observations in the same class, and $ b $ is the mean distance between a sample and all other observations in the next nearest cluster. The silhouette coefficient is a measure of how similar an observation is to its own cluster compared to other clusters. It ranges from -1 to +1, where a high values indicates that the observation is well matched to its own cluster and poorly matched to neighboring clusters.\n",
+    "where $ a $ is the average distance between a sample and all other observations in the same class, and $ b $ is the average distance between a sample and all other observations in the next nearest cluster. The silhouette coefficient is a measure of how similar an observation is to its own cluster compared to other clusters. It ranges from -1 to +1, where a high values indicates that the observation is well matched to its own cluster and poorly matched to neighboring clusters.\n",
     "\n",
     "Our approach will be simple: we'll compute the average silhouette coefficient of several clustering strategies using different $ k $ values. Generally speaking, if we obtain a high average value it means that we have good clustering.\n",
     "\n",
