Adding the references section

--- a/FakeNewsDetection/main.ipynb
+++ b/FakeNewsDetection/main.ipynb
@@ -850,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this, we can count the occurrencies of each sentiment polarity class in articles titles and text."
+    "With this, we can count the occurrences of each sentiment polarity class in article titles and text."
    ]
   },
   {
@@ -2199,6 +2199,28 @@
     "- We applied the TF-IDF vector extraction techinique to create the feature matrix and trained a list of machine learning models using it to detect fake news.\n",
     "- Wel also analyzed the prediction errors of the final model, comparing with the analysis of the whole data."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "Much of the concepts and figures presented here were inspired by [Aysel Aydin](https://ayselaydin.medium.com/)'s posts about Natural Language Processing.\n",
+    "\n",
+    "The code for this project and other ones ones that I've published can be found in this GitHub repository:\n",
+    "\n",
+    "[https://github.com/TheCamilovisk/DataScienceMiniProjects](https://github.com/TheCamilovisk/DataScienceMiniProjects)\n",
+    "\n",
+    "Other useful links:\n",
+    "- [Alura's post about basic NLP concepts (in Portuguese)](https://www.alura.com.br/artigos/guia-nlp-conceitos-tecnicas)\n",
+    "- [NLTK's official documentation](https://www.nltk.org/)\n",
+    "- [Dataset's Kaggle page](https://www.kaggle.com/datasets/nopdev/real-and-fake-news-dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
